<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/cheat_button"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:layout_gravity="right"
            android:src="@drawable/cheat_icon"
            android:contentDescription="@string/cheat_button" />

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/number_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_0"
                android:textSize="20dp"
                android:padding="15dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/true_button"
                    android:layout_width="60pt"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/true_button" />

                <Button
                    android:id="@+id/false_button"
                    android:layout_width="60pt"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/false_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/previos_button"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/arrow_left"
                    android:contentDescription="@string/previos_button" />

                <ImageButton
                    android:id="@+id/next_button"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/arrow_rigth"
                    android:contentDescription="@string/next_button" />

            </LinearLayout>

            <Button
                android:id="@+id/end_button"
                android:layout_width="100pt"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:visibility="invisible"
                android:clickable="false"
                android:text="@string/end_button" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>